# Gestalt

./: .gitignore  README.md  bug-report-chrome-firefox-layout-shift.md  build.sh  development-guidelines.md  gpu-debugger-ui-gaps.md  notes.txt  package.json  pnpm-workspace.yaml  run.sh  setup.sh
crates/wasm_greedy_mesher/: Cargo.toml
crates/wasm_greedy_mesher/src/: lib.rs
crates/wasm_renderer/: Cargo.toml
crates/wasm_renderer/src/: camera.rs  gpu.rs  lib.rs  mesh_cpu.rs  obj_parser.rs  pool.rs  pool_gpu.rs  scene.rs  summary_cpu.rs  voxelizer_cpu.rs
crates/wasm_renderer/src/gi/: mod.rs
crates/wasm_renderer/src/gi/null_backend/: mod.rs
crates/wasm_renderer/src/gi/v2_legacy/: backend.rs  cascade_build.rs  mod.rs
crates/wasm_renderer/src/gi/v2_legacy/shaders/: cascade_build.wgsl  cascade_debug.wgsl  dda_common.wgsl
crates/wasm_renderer/src/gi/v3/: backend.rs  constants.rs  dispatch.rs  mod.rs  probe_slot.rs  reference.rs  resources.rs
crates/wasm_renderer/src/gi/v3/shaders/: cascade_build.wgsl  cascade_common.wgsl
crates/wasm_renderer/src/passes/: build_indirect.rs  build_wireframe.rs  frustum_cull.rs  hiz_build.rs  mesh_count.rs  mesh_rebuild.rs  mod.rs  occlusion_cull.rs  prefix_sum.rs  summary.rs
crates/wasm_renderer/src/shaders/: build_indirect.wgsl  build_wireframe.wgsl  depth_prepass.wgsl  depth_viz.wgsl  frustum_cull.wgsl  hiz_build.wgsl  mesh_count.wgsl  mesh_rebuild.wgsl  normals.wgsl  occlusion_cull.wgsl  prefix_sum.wgsl  solid.wgsl  solid_null.wgsl  solid_v2.wgsl  solid_v3.wgsl  summary_rebuild.wgsl  wireframe.wgsl
crates/wasm_voxelizer/: Cargo.toml
crates/wasm_voxelizer/src/: lib.rs
docs/: CURRENT.md  INDEX.md  PROFILING.md  README.md  VOXELIZER_AUDIT.md  architecture-addendum.md  architecture-map.md  chunk-management-system.md  deep-research-indirect.md  development-guidelines.md  greedy-mesh-implementation-plan.md  greedy-mesher-crate-structure.md  implementation-plan.md  palette-materials-plan.md  palette-repack-critique.md  threejs-buffer-management.md  typescript-architecture.md  vault-guide.md  voxel-mesh-architecture.md
legacy/crates/greedy_mesher/: Cargo.toml
legacy/crates/greedy_mesher/src/: debug.rs  mesh.rs
legacy/crates/greedy_mesher/src/chunk/: budget.rs  chunk.rs  palette_repack.rs  stats.rs
legacy/crates/greedy_mesher/src/merge/: mod.rs  x_faces.rs  y_faces.rs  z_faces.rs
legacy/crates/voxelizer/: Cargo.toml
legacy/crates/voxelizer/src/: reference_cpu.rs
legacy/crates/voxelizer/src/gpu/: compact_positions.rs  mod.rs  sparse.rs
(+353 files in other folders)
