[package]
name = "wasm_greedy_mesher"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for binary greedy meshing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
greedy_mesher = { path = "../greedy_mesher" }
bytemuck = { version = "1.16", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
