[package]
name = "wasm_renderer"
version = "0.1.0"
edition = "2021"
description = "GPU-resident voxel renderer — Rust/WASM, main-thread WebGPU (ADR-0014)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.27"
wgpu = { version = "29", features = ["webgpu"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlCanvasElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
