[package]
name = "voxelizer"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.27"
wgpu = { version = "22", features = ["webgpu"] }
thiserror = "1.0"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
rand = "0.8"
